# printdynamic

./: .gitignore  Cargo.toml  index.html  printdynamic_pages-911620a7296e205c_bg.wasm  printdynamic_pages-f67a8ac17ceaace3_bg.wasm  readme.md
src/: app.rs  interpreter.rs  lib.rs  main.rs  segments.rs
tests/: test.rs
