[package]
name = "printdynamic_pages"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.7.8", features = ["csr"] }
log = "0.4.27"
nalgebra = "0.33.2"
printdynamic = "0.1.1"
serde = "1.0.219"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["FileList", "File"] }
